--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
   },
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
+    "start": "astro preview --host 0.0.0.0 --port $PORT",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
+  },
+  "engines": {
+    "node": "20.x"
   },
   "devDependencies": {
     "prettier": "^3.6.2",
