--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dev": "astro dev",
     "start": "astro preview --host 0.0.0.0 --port $PORT",
     "build": "astro build",
+    "postinstall": "astro sync",
     "preview": "astro preview",
     "astro": "astro"
   },
