--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,11 +1,7 @@
-[phases.setup]
-nixPkgs = ['nodejs_20']
-
-[phases.install]
-cmds = ['npm ci']
+providers = ["node"]
 
 [phases.build]
-cmds = ['npm run build']
+cmds = ["npm run build"]
 
 [start]
-cmd = 'npm start'
+cmd = "npm start"
