--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "scripts": {
     "dev": "astro dev",
-    "start": "astro preview --host 0.0.0.0 --port $PORT",
+    "start": "astro preview --host 0.0.0.0 --port $PORT --allowed-hosts all",
     "build": "astro build",
     "postinstall": "astro sync",
     "preview": "astro preview",
