--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "tailwindcss": "^4.1.4"
+    "tailwindcss": "^4.1.4",
+    "serve": "^14.2.1"
   },
   "scripts": {
     "dev": "astro dev",
-    "start": "astro preview --host 0.0.0.0 --port $PORT --allowed-hosts all",
+    "start": "serve dist -s -l $PORT",
     "build": "astro build",
     "postinstall": "astro sync",
     "preview": "astro preview",
