--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "tailwindcss": "^4.1.4",
-    "serve": "^14.2.1"
+    "serve": "^14.2.4",
+    "tailwindcss": "^4.1.4"
   },
   "scripts": {
     "dev": "astro dev",
