--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "dependencies": {
     "@astrojs/markdoc": "^0.15.1",
+    "@astrojs/node": "^9.1.0",
     "@astrojs/react": "^4.3.0",
     "@keystatic/astro": "^5.0.6",
     "@keystatic/core": "^0.5.48",
@@ -22,7 +23,7 @@
   },
   "scripts": {
     "dev": "astro dev",
-    "start": "serve dist -s -l $PORT",
+    "start": "node ./dist/server/entry.mjs",
     "build": "astro build",
     "postinstall": "astro sync",
     "preview": "astro preview",
